--- a/SimTECH/SimTECH/Pages/Manufacturers/Index.razor
+++ b/SimTECH/SimTECH/Pages/Manufacturers/Index.razor
@@ -23,12 +23,11 @@
                 New
             </MudButton>
         </MudStack>
-        <MudText Typo="Typo.body2" Color="Color.Info" Class="px-4">These values do not apply when using wet tyres.</MudText>
     </MudPaper>
     <MudTable Items="@TyreSuppliers" Bordered="true" Dense="true">
         <HeaderContent>
             <MudTh>Name</MudTh>
-            <MudTh>Life Bonus</MudTh>
+            <MudTh>Life bonus</MudTh>
             <MudTh>Wear</MudTh>
             <MudTh></MudTh>
         </HeaderContent>
