--- a/SimTECH/SimTECH/Pages/Seasons/Overview/EntrantWizard/Steps/EditDrivers.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/EntrantWizard/Steps/EditDrivers.razor
@@ -61,7 +61,7 @@
                     }
                     else
                     {
-                        <MudText>Unexperienced bloke lol</MudText>
+                        <MudText>Fella doesn't even has any experience, what an amateur!</MudText>
                     }
                 </MudTd>
             </RowTemplate>
