--- a/SimTECH/SimTECH/Shared/HelpBlocks/DriverHelp.razor
+++ b/SimTECH/SimTECH/Shared/HelpBlocks/DriverHelp.razor
@@ -2,10 +2,11 @@
 <MudDivider Class="my-1" />
 
 <MudText>
-    Represents the people behind the racing wheel.
+    Represents the folks sitting behind the racing wheel.
 </MudText>
-<br /><br/>
-<MudText>In-season value grade</MudText>
+<br />
+<br />
+<MudText>Indicator of 'good' and 'bad' relative values.</MudText>
 <MudSimpleTable>
     <thead>
         <tr>
