--- a/SimTECH/SimTECH/Shared/HelpBlocks/ManufacturerHelp.razor
+++ b/SimTECH/SimTECH/Shared/HelpBlocks/ManufacturerHelp.razor
@@ -1,2 +1,25 @@
 ﻿<MudText Typo="Typo.h6">Tyre suppliers</MudText>
 <MudDivider Class="my-1" />
+
+<MudText>
+    Tyre suppliers represent the different manufacturers which may exist for the used racing tyres.
+    How these are different from each other, depends on the values which the user (aka: you) enters for each manufacturer.
+</MudText>
+<br />
+<MudText Typo="Typo.subtitle2">Life bonus</MudText>
+<MudText>
+    Additional pace value applied for every advance.
+</MudText>
+<br />
+<MudText Typo="Typo.subtitle2">Wear</MudText>
+<MudText>
+    The additional minimum and maximum the race tyres get, this is additive to the wear of the tyre itself.
+    Field supports negative numbers as an input value.
+    Keep in mind that wear is subtracted from the remaining tyre life, thus a negative value means the tyre uses LESS wear.
+</MudText>
+<br />
+<br />
+<MudText Typo="Typo.subtitle1">Important</MudText>
+<MudText Typo="Typo.body2" Color="Color.Warning">
+    Values related to the tyre supplier do not apply when using wet tyres.
+</MudText>
