--- a/SimTECH/SimTECH/Shared/HelpBlocks/NotFoundHelp.razor
+++ b/SimTECH/SimTECH/Shared/HelpBlocks/NotFoundHelp.razor
@@ -1,3 +1,5 @@
-﻿<MudText>
-    Sorry mate, there is no help for you here.
+﻿<h2 class="font-roadrage">No help available</h2>
+<MudDivider Class="my-1" />
+<MudText>
+    Sorry mate, there is no help for you here. Good luck figuring it out!
 </MudText>
