--- a/SimTECH/SimTECH/Shared/MainLayout.razor.css
+++ b/SimTECH/SimTECH/Shared/MainLayout.razor.css
@@ -21,7 +21,8 @@ main {
     align-items: center;
 }
 
-    .top-row ::deep a, .top-row .btn-link {
+    .top-row ::deep a,
+    .top-row .btn-link {
         white-space: nowrap;
         margin-left: 1.5rem;
     }
@@ -40,7 +41,8 @@ main {
         justify-content: space-between;
     }
 
-    .top-row a, .top-row .btn-link {
+    .top-row a,
+    .top-row .btn-link {
         margin-left: 0;
     }
 }
@@ -63,7 +65,8 @@ main {
         z-index: 1;
     }
 
-    .top-row, article {
+    .top-row,
+    article {
         padding-left: 2rem !important;
         padding-right: 1.5rem !important;
     }
