--- a/SimTECH/SimTECH/Shared/HelpBlocks/DevelopHelp.razor
+++ b/SimTECH/SimTECH/Shared/HelpBlocks/DevelopHelp.razor
@@ -1,11 +1,10 @@
 ﻿<MudText Typo="Typo.h6">Development</MudText>
 <MudDivider Class="my-1" />
-
 <MudText>
     Drivers, teams and engines generally don't keep the same ratings forever. Over a certain amount of time they tend to become better or worse. 
     We control this by running our own development on these entrants. Most, if not all, aspects of an entrant which are a single number, can be developed.
 </MudText>
-
 <MudText>
-    Can be found at the initial overview page of a season.
+    Developing drivers can be done by selecting the 'development' button at the landing page of a season overview.
+    Do note that development can only be done for active seasons!
 </MudText>
